kustomization/components/networkpolicy-allow-to-proton-bridge/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-proton-bridge-networkpolicy
spec:
  egress:
    - ports:
        - port: 25
        - port: 143
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: proton-mail
          podSelector:
            matchLabels:
              app.kubernetes.io/name: proton-bridge
  podSelector:
    matchLabels:
      hogs.tswn.us/proton-bridge-client: "true"
  policyTypes:
    - Egress
